--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JS Drum_Kit</title>
+	<title>1*3Y3-Drum_kit</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
